workflow: static linking

--- a/程序员的自我修养/03-目标代码里有什么.md
+++ b/程序员的自我修养/03-目标代码里有什么.md
@@ -29,7 +29,7 @@
 ![](./snapshots/3.1.png)
 
 1. 文件头
-  - 描述了整个文件的文件属性, 包括文件是否可执行, 是静态链接还是动态连接及入口地址(如果是可执行文件), 目标硬件, 目标操作系统等
+  - 描述了整个文件的文件属性, 包括文件是否可执行, 是静态链接还是动态链接及入口地址(如果是可执行文件), 目标硬件, 目标操作系统等
   - 包括一个段表(Section Table), 一个描述文件中各个段的数组, 描述了文件中各个段在文件中的的偏移位置及段的属性等
   - 文件头后面就是各个段的内容
 
@@ -64,7 +64,7 @@ objdump -s -d SimpleSection.o
 ![](./snapshots/3.3.2.1.png)
 
 ### 数据段和只读数据段
-`.data`段保存的是已经初始化了的全局静态变量和局部静态变量. SimpleSection.c代码里面一共有两个这样的变量, 分别是`global_init_varabal`和`static_var`每个4字节, 共8字节
+`.data`段保存的是已经初始化了的全局静态变量和局部静态变量. SimpleSection.c代码里面一共有两个这样的变量, 分别是`global_init_varable`和`static_var`每个4字节, 共8字节
 
 `.rodata`段存放的是只读数据, 一般是程序里面的只读变量(如const修饰的变量)和字符串常量.
 
@@ -72,12 +72,12 @@ objdump -s -d SimpleSection.o
 `.bss`段存放的是未初始化的全局变量和局部静态变量. 如`global_uninit_var`和`static_var2`. `.bss`段为它们预留了空间.
 
 ### 其他段
-除了`.text,.data,.bss`这3个最常用的段之外, `ELF`文件也有肯能包含其他的段, 用来保存于程序相关的其他信息.
+除了`.text,.data,.bss`这3个最常用的段之外, `ELF`文件也有可能包含其他的段, 用来保存于程序相关的其他信息.
 ![](./snapshots/3.3.2.2.png)
 
 这些段的名字都是由`.`作为前缀, 表示这些表的名字是系统保留的, 应用程序也可以使用一些非系统保留的名字作为段名.
 
-自定义段: 正常情况下,GCC编译出来的目标文件中, 代码会被放到`.text`段.为了满足某些硬件的内存和I/O的地址布局, 或者像Linux操作系统内核中来完成一些褚淑华和用户控件复制时出现页错误异常等.GCC提供了一个扩展机制, 使得程序员可以指定变量所处的段.
+自定义段: 正常情况下,GCC编译出来的目标文件中, 代码会被放到`.text`段.为了满足某些硬件的内存和I/O的地址布局, 或者像Linux操作系统内核中来完成一些诸如和用户控件复制时出现页错误异常等.GCC提供了一个扩展机制, 使得程序员可以指定变量所处的段.
 ```c
 __attribute__((section("FOO"))) int global = 42;
 __attribute__((section("FOO"))) void foo(){
@@ -245,7 +245,7 @@ namespace N {
 | int N::func(int)| _ZN1N4funcEi |
 | int N::C::func(int)| _ZN1N1C4funcEi |
 
-GCC的基本C++名称修饰方法如下:  所有的符号都以`_Z`开头, 对于嵌套名字(在名称空间或在类里面的), 后面紧跟`N`. 然后是各个名称空间和类的名字, 美格尔名字前是名字字符串长度, 再以`E`结尾.如果是一个函数, 它的参数列表紧跟在`E`后面.
+GCC的基本C++名称修饰方法如下:  所有的符号都以`_Z`开头, 对于嵌套名字(在名称空间或在类里面的), 后面紧跟`N`. 然后是各个名称空间和类的名字, 每个名字前是名字字符串长度, 再以`E`结尾.如果是一个函数, 它的参数列表紧跟在`E`后面.
 
 binutils里面提供了一个叫`c++filt`的工具可以用来解析被修饰过的名称:
 
@@ -259,3 +259,81 @@ N::C::func(int)
 名称修饰机制也被用来防止静态变量的名字冲突. 如`main()`函数里面有一个静态变量叫foo, 而`func()`函数里面也有一个静态变量叫foo. 为了区分这两个变量, GCC会将它们的符号分别修饰成两个不同的名字`_ZZ4mainE3foo`和`_ZZ4funcvE3foo`.
 
 由于不同的编译器采用不同的名字修饰方法, 必然会导致由不同编译器编译产生的目标文件无法正常相互链接, 这是导致不同编译器之间不能互操作的主要原因之一.
+
+### extern "C"
+C++为了与C兼容, 在符号管理上, C++有一个用来声明或定义一个C的符号的`extern "C"`关键字用法
+```cpp
+extern "C" {
+  int func(int);
+  int var;
+}
+```
+C++编译器会在`extern "C"`大括号内的代码当做C语言处理. 上述代码中C++的名称修饰机制将不会起作用.
+
+单独声明某个函数或变量为C语言的符号:
+```cpp
+extern "C" int func(int);
+extern "C" int var;
+```
+
+```cpp
+// ManualNameMangling.cpp
+// g++ ManualNameMangling.cpp -o ManualNameMangling
+
+#include <stdio.h>
+extern "C" int _ZN6myname3varE; // 手动使用extern "C"方法声明一个外部符号 _ZN6myname3varE
+
+namespace myname{
+  int var = 42; // GCC编译器修饰后的名称为 _ZN6myname3varE
+}
+int main(){
+  printf("%d\n", _ZN6myname3varE); // 使用GCC来编译并运行, 会得到输出42
+  return 0;
+}
+```
+
+### 弱符号与强符号
+
+多个目标文件中含有相同的名字全局符号的定义, 在链接的时候回出现符号重定义的错误.
+
+- 强符号(Strong Symbol): 对于C/C++,编译器默认函数和初始化了的全局变量为强符号
+- 弱符号(Weak Symbol): 未初始化的全局变量为弱符号. 可以显示使用GCC的`__attribute((weak))`来定义任何一个强符号为弱符号.
+
+注: 强符号和弱符号都是针对定义来说的,不是针对符号的引用.
+
+```c
+extern int ext; // 外部变量的引用(既非强符号也非弱符号)
+
+int weak; // 弱符号
+int strong = 1; // 强符号
+__attribute__((weak)) weak2 = 2; // 弱符号
+
+int main() // 强符号
+{
+  return 0;
+}
+
+```
+
+链接器会按照以下规则处理被多次定义的全局符号:
+1. 不允许强符号被多次定义(即不同的目标文件中不能有同名的强符号), 否则链接器报符号重复定义
+2. 如果一个符号在某个目标文件中是强符号, 在其他目标文件中是弱符号, 那么选择强符号
+3. 如果一个符号在所有的目标文件中都是弱符号, 那么选择其中占用空间最大的一个
+
+
+#### 弱引用于强引用
+- 强引用(Strong Reference):  目标文件最终被链接成可执行文件时, 对外部目标文件符号的引用需要被正确决议, 如果没有找到该符号的定义, 链接器就会报符号未定义错误.
+- 弱引用(Weak Reference): 在处理弱引用时, 如果该符号有定义, 则链接器将该符号的引用决议; 如果该符号未定义, 则链接器对于该引用不报错. 在GCC中, 使用`__attribute__((weakref))`这个扩展关键字来生命对一个外部函数的引用为弱引用.
+
+```cpp
+__attribute__ ((weakref)) void foo();
+int main()
+{
+  foo();
+}
+```
+
+## 调试信息
+现代编译器都支持源代码级别的调试(函数断点, 监视变量, 单步进行等), 前提是编译器必须提前将源代码与目标代码之间的关系保存到目标文件里面. 调试信息在目标文件和可执行文件中占用很大的空间, 往往比程序的代码和数据本身大好几倍.
+
+GCC编译时加上`-g`参数, 编译器会在产生的目标文件中加上调试信息. ELF文件中采用DWARF(Debug With Arbitrary Record Format)的标注的调试信息格式.
