workflow: asm basic complete

--- a/macOS软件安全与逆向分析/05-汇编基础.md
+++ b/macOS软件安全与逆向分析/05-汇编基础.md
@@ -232,9 +232,51 @@ as汇编器通过了两种定义字符串的伪指令.
 在x86_64架构中根据功能的不同分为通用寄存器, 段寄存器, 控制寄存器, 浮点寄存器, 标志寄存器, 调试寄存器等.在较新的支持MMX, SSE和AVX指令集的CPU中, 还有这些指令集专用的MMX寄存器, SSE寄存器和AVX寄存器
 
 1. 通用寄存器
-2. 指令指针寄存器
-3. 标志寄存器
-4. 其他寄存器
+x86_64架构中共有16个通用寄存器(General Purpose Registers, GPRs), 大小都是64bit. 这些寄存器也可以进行拆分为32bit, 16bit或8bit的寄存器.
+![](snapshots/5.4.png)
+
+![](snapshots/5.5.png)
+
+在x86_64汇编中, 操作32位的寄存器会对整个64位寄存器造成影响, 比如将EAX寄存器赋值为1, 则整个REX寄存器也会被赋值为1, 而不是只有第32位被赋值为1, 操作16位或8位的寄存器则不会有此影响.
+
+大多数寄存器在特定的时候都会专门的作用, 如
+
+- `RCX`: 称为计数器(Counter),在使用重复前缀(REP)指令和LOOP指令时用于计数.
+- `RDX`: 在进行除法运算时用作存放余数.
+- `RSP`: 栈指针寄存器, 用于存放当前任务的栈顶指针.
+- `RBP`: 基址指针寄存器, 一般被用存放作高级语言函数调用中栈帧的基地址.
+
+
+3. 指令指针寄存器
+- `RIP`用于存放CPU将要执行的下一条指令的地址, 该寄存器是无法再汇编代码中直接修改, 是由控制转移指令和CPU按照规则自动管理.
+
+当CPU执行完一条指令之后, RIP会执行该指令的下一条指令, 如果执行的是跳转指令或者函数调用指令等控制转移指令, 则会将RIP设置为控制转移指令的目标地址
+
+RIP寄存器对应32位汇编中的EIP寄存器, 该寄存器在32位汇编代码中是无法使用的, 但是在64位汇编中却可以使用, 不过此时RIP寄存器的作用并不是指令指针寄存器, 而是保存这数据段基地址. 由于IA-32指令体系的限制, 指令中的立即数长度是无法超过4字节的, 因此在内存寻址中要访问完整的8字节的地址需要使用RIP寄存器作为基地址.
+
+4. 标志寄存器
+标志寄存器(RFLAGS)中存储着一组影响CPU行为的标志, 或用于指示上一条指令的执行状态, 其中常用的标志位及其作用如下:
+
+| 名称 | bit位 | 作用 | 
+| ---- | ---- | ---- |
+| CF | 0 | 若算术操作产生的结果在最高有效位发生进位或借位则被置1, 反之清零 |
+| ZF | 6 | 如果前一条指令的运算结果为0则被置1, 反之清零 |
+| SF | 7 | 用于指示前一条指令的执行结果在最高有效位是否为1(即是否为负数) |
+| TF | 8 | 当该位被置为1时启动单步调试模式, CPU每执行完一条指令就会触发一个单步异常 |
+| DF | 10 | 用于控制串指令(MOVS,LODS等)执行时地址为递增还是递减, 为1时递减, 为0则是递增 |
+| OF | 11 | 用于指示前一条指令的计算结果是否有溢出 |
+
+RFLAGS寄存器还有许多保留位, 我们尽量不对其做任何处理, 既不使用其保存数据, 也不适用这些位中的数据.
+
+5. 其他寄存器
+x86_64架构中除了通用寄存器之外, 还有许多其他寄存器, 但是其涉及的功能比较复杂. 这些寄存器主要包括以下7种
+- 浮点寄存器: 用于处理浮点数的一组寄存器. 由于早期浮点数处理是有一个单独的协处理器x87进行处理的, 所以浮点指令所使用的寄存器与普通指令并不相同, 而是使用单独的浮点寄存器.
+- 段寄存器: 用于存放段基地址的寄存器. 本章中的代码都处于平坦模式下, 所有的段都使用相同的基地址, 在x86_64汇编中一般不需要用到段地址.
+- MMX寄存器: MMX指令集可以使用的一组寄存器
+- SSE寄存器: SSE指令集可以使用的一组寄存器
+- AVX寄存器: AVX指令集可以使用的一组寄存器
+- 控制寄存器: 与标志寄存器类似的一组寄存器, 用于控制CPU运行行为
+- 调试寄存器: 用于软件调试的一组寄存器
 
 ### 汇编语法
 
@@ -337,9 +379,190 @@ AT&T格式的汇编与Intel汇编的差异:
 - ret: 从栈中弹出一个值, 并将这个值作为地址跳转过去
 
 ### 栈操作指令
+一个程序运行时的内存一般可以简单地划分3个区:
+
+1. 代码区: 用于存放程序的代码
+2. 静态数据区: 用于存放全局变量和静态变量
+3. 动态数据区: 用于存放程序运行时动态申请的内存
+    - 堆: C语言中, 使用`malloc`函数申请的内存都位于堆区.(这里的堆与数据结构中的堆不同)
+    - 栈: 局部变量和函数的参数位于栈.
+
+在堆申请的内存, 一般需要程序员手动释放, 但是有的高级语言具有垃圾回收机制或引用计数, 可以帮助程序员进行回收.
+
+在高级语言中, 栈一般是由编译器进行管理的. 不过在汇编预言者, 需要手工使用汇编指令操作栈, 在调用函数时还需要遵守调用约定保持栈的平衡.
+
+操作栈常用指令:
+
+| 指令 | 描述 |
+| --- | --- |
+| push | 递减堆栈指针(RSP), 然后将源操作数存储到栈顶 |
+| pop | 将栈顶的值加载到目标操作数指定的位置, 然后递增堆栈指针(RSP) |
+| pushfq | 将堆栈指针递减8, 并将RFLAGS寄存器的全部内容压入堆栈 |
+| popfq | 将栈顶的四字(8位)弹出, 并将它的值存储到RFLAGS寄存器 |
+
+在32位的x86汇编中还有`pushad,popad`指令用于一次性将所有通用寄存器压入, 弹出栈. 但是在64位汇编中不支持这2个指令
 
 ### 运算指令
+x86_64汇编直接支持不超过64位的整数的加减乘除运算, 不过对于更大的数的运算, 就需要自己实现或使用第三方库. 除了普通的四则运算, 还支持逻辑与,或,非等指令.
+
+
+| 运算指令 | 描述 |
+| ---- | ---- |
+| add | 加法指令, 将第一个操作数和第二个操作数相加, 并将结果存储到第一个操作数中. 根据补码的特性, add 指令不需要区分有符号或无符号操作数, 但是会根据两种数据类型的计算结果设置OF与CF标志为1, 以表示有符号或无符号结果的进位. SF标志表示有符号结果的符号 |
+| adc | 带进位加法, 与add指令不同之处在于该指令会将CF标志位一并加上 |
+| sub | 减法指令, 使用第一个操作数减去第二个操作数, 并将结果存储到目标操作数中. 同样不区分操作数是否有符号, 但是会根据两种数据类型的计算结果设置OF与CF标志位1, 以表示有符号或无符号结果的借位. SF标志表示符号结果的符号 |
+| sbb | 带借位减法, 与sub指令不同之处在于该指令会将CF标志位一并减去 |
+| mul | 无符号乘法指令, 将操作数与隐含操作数进行无符号乘法操作, 计算结果则分成两部分存在于两个寄存器中. 当操作数大小为8/16/32/64位时, 另一个乘数分别对应为AL/AX/EAX/RAX, 结果存储在AX/DX:AX/EDX:EAX/RDX:RAX中 |
+| imul | 有符号乘法指令, 该指令可以有一个, 两个或三个操作数.<br/> 当有一个操作数时, 操作数规则与mul相同;<br/>当有2个操作数时, 则将第一个操作数与第二个操作数相乘, 并将结果存储到第一个操作数中; <br/>有3个操作数时, 将第二个操作数与第三个操作数相乘, 并将结果存储到第一个操作数中 |
+| div | 无符号触发指令, 操作数为除数, 当操作数大小为8/16/32/64位时, 被除数对应为AX/DX:AX/EDX:EAX/RDX:RAX, 商保存在AL/AX/EAX/RAX中, 余数保存在AH/DX/EDX/RDX中|
+| idiv | 有符号除法指令, 操作数规则与div相同 |
+| xor | 逻辑异或指令, 第一个操作数与第二个操作数执行逐位异或运算, 将结果存储到第一个操作数中 |
+| or | 逻辑或指令, 第一个操作数与第二个操作数执行逐位或运算, 将结果存储到第一个操作数中 |
+| and | 逻辑与指令, 第一个操作数与第二个操作数执行逐位与运算, 将结果存储到第一个操作数中 |
+| not | 逻辑非指令, 对目标操作数执行逐位"非"操作, 将结果存储到目标操作数位置 |
 
 ## 与其他模块的交互
+
 ### 与C语互相调用
+相互调用分为2个方面:
+1. 从汇编中调用C语言的函数
+2. C语言调用汇编语言的函数
+调用约定: 进行函数调用则需要调用者和被调用者直接有一个统一的约定来传递参数和清理栈
+
+在32位环境中, 调用约定比较多, 有`cdecl, stdcall, fastcall`等. 在64位环境中调用约定比较统一(在不同的操作系统有一些差异, 本文只关心macOS系统).
+
+在64位的类UNIX系统中, 调用约定都遵守`System V AMD64 ABI reference`文档中所描述的调用约定, 函数的前6个整型参数保存在`RDI,RSI,RDX,RCX,R8,R9`寄存器中.如果是浮点参数, 则保存在XMM0到XMM7寄存器中. 剩下的参数则压入栈中, 函数需要通过栈指针获取这些参数. 整型返回值保存在RAX寄存器中, 浮点型返回值保存在XMM0中.
+
+示例1: 从汇编中调用C语言
+用xcode新建一个macOS CommandLine tools
+`print.c`
+```c
+#include <stdio.h>
+#include <stdint.h>
+uint64_t foo(uint64_t a1, uint64_t a2,uint64_t a3,uint64_t a4,uint64_t a5,uint64_t a6,uint64_t a7,uint64_t a8,uint64_t a9,uint64_t a10){
+    printf("a1=%lld, a2=%lld, a3=%lld, a4=%lld, a5=%lld, a6=%lld, a7=%lld, a8=%lld, a9=%lld, a10=%lld", a1,a2,a3,a4,a5,a6,a7,a8,a9,a10);
+    return a1+a2+a3+a4+a5+a6+a7+a8+a9+a10;
+}
+
+```
+`main.s`
+```s
+.text
+.intel_syntax noprefix
+.globl       _main
+.align      4, 0x90
+_main:
+    push rbp
+    mov rbp,rsp
+    push 10
+    push 9
+    push 8
+    push 7
+    mov r9d, 6
+    mov r8d, 5
+    mov ecx, 4
+    mov edx, 3
+    mov esi, 2
+    mov edi, 1
+    call _foo			# 调用c函数, c函数foo会被命名为_foo
+    add rsp, 32		# 恢复栈指针, 由于函数开始时连续执行了4次push
+    pop rbp
+    ret
+```
+运行结果:
+```
+a1=1, a2=2, a3=3, a4=4, a5=5, a6=6, a7=7, a8=8, a9=9, a10=10Program ended with exit code: 55
+```
+
+代码解释:
+1. 前6个参数使用寄存器传递, 此处只用32位寄存器是因为x86_64的机制. 如将1送入edi, 实际上rdi的值也为1. 但是如果使用`mov rdi, 1`, 由于需要`rex prefix`将会导致生成的机器码边长. 生效的a7-a10参数是放到堆栈上进行传递的.
+2. 根据C函数命名的规定, 在C代码中定义的函数在汇编中使用时需要在函数名前加一个下划线, 这里调用的是`_foo`. 调用完毕后由调用者负责将栈恢复平衡, 在调用函数时向栈上压入4个8字节的参数, 所以这里使用`add rsp, 32`来修改栈指针.
+3. 返回值保存在rax寄存器中, 然后rax寄存器又被当做main函数的返回值返回给了额操作系统, 所以输出`Program ended with exit code: 55`
+
+
+示例2: 从C语言中调用汇编
+
+`main.c`
+```c
+#include <stdio.h>
+
+uint64_t foo(uint64_t a1, uint64_t a2,uint64_t a3,uint64_t a4,uint64_t a5,uint64_t a6,uint64_t a7,uint64_t a8,uint64_t a9,uint64_t a10);
+
+int main(int argc, const char * argv[]) {
+    // insert code here...
+    printf("Result is %lld", foo(1,2,3,4,5,6,7,8,9,10));
+    return 0;
+}
+
+```
+`foo.s`
+```s
+.section  __TEXT,__text,regular,pure_instructions
+.macosx_version_min 10,15
+.intel_syntax noprefix
+.globl       _foo
+.align      4, 0x90
+_foo:
+    push rbp
+    mov rbp,rsp
+    lea rax,[rdi+rsi]
+    #mov rax,rdi
+    #add rax,rsi
+    add rax,rdx
+    add rax,rcx
+    add rax,r8
+    add rax,r9
+    add rax, qword ptr [rbp + 16]
+    add rax, qword ptr [rbp + 24]
+    add rax, qword ptr [rbp + 32]
+    add rax, qword ptr [rbp + 40]
+
+    pop rbp
+    ret
+
+```
+注意: 如果参数或者返回值的宽度不是64位的, 在使用的时候需要使用相应宽度的寄存器. 不过放到栈上的参数任然是64位的, 在使用的时候需要自己取出对应宽度的值.
+
 ### 使用系统调用
+
+为了保护系统内核不会轻易地被其他代码所破坏, 处理器需要对代码进行权限分级. 低权限的代码将不能执行某些特权指令, 不能访问高权限代码的地址空间.
+
+- 内核模式: 系统内核一般都运行在高权限模式
+- 用户模式: 普通应用程序的代码运行在低权限下
+
+当普通权限的代码需要使用内核提供的功能时, 需要通过上下文切换方式切换到内核模式中.在`x86_64`处理器中提供了`Ring0-Ring3`这4个权限级别, 而`macOS`系统只使用了其中2个权限级别, 系统内核运行在Ring0级别, 用户态代码则运行在Ring3, 从用户态切换到内核态需要使用syscall指令(在32位系统上使用的是sysenter指令), 从内核态返回到用户态则需要使用sysexit指令.
+
+macOS系统调用的约定也遵循`System V AMD64 ABI reference`文档中所描述的系统调用约定, 与普通函数的调用约定十分相似, 系统调用的前6个参数存放在`RDI,RSI,RDX,RCX,R8,R9`寄存器中, 超过6个的部分放到栈中, 返回值存放于RAX寄存器
+
+系统调用都需要一个调用号, 系统调用号与系统调用之间的对应关系可以参考[XNU源码中`bsd/kern/syscalls.master`](https://github.com/apple/darwin-xnu/blob/master/bsd/kern/syscalls.master)文件
+
+![](./snapshots/5.3.png)
+
+这个文件会被脚本编译成C语言代码, 其中第一列就是系统调用号(要加上`0x2000000`才是真正的系统调用号), 后面则是这个系统调用的C语言的函数声明.
+
+示例: 在控制台中输出`Hello world`
+
+`hello_syscall.s`
+```s
+.text
+.intel_syntax noprefix
+.globl  _main
+_main:
+    mov edi, 1
+    lea rsi, [rip + str]
+    mov rdx, 12
+    mov rax, 0x2000004
+    syscall
+
+    xor eax,eax
+    ret
+.cstring
+str:
+    .ascii "Hello World\n"
+
+```
+此处的系统调用号是4, 根据`syscalls.master`可以找到对应的是write系统调用:
+```c
+user_ssize_t write(int fd, user_addr_t cbuf, user_size_t nbyte);
+```
+该调用用于向一个文件描述符中写入内容, 第一个参数是文件描述符, 当该参数为1时表示写到控制台上进行显示, 后两个参数分别是要写入的内容和长度
